# flexPTP-demo-NUCLEO-F439ZI

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  stm32f439zitx_FLASH.ld
Drivers/: CMakeLists.txt
Drivers/CMSIS/: CMakeLists.txt
Drivers/CMSIS/CMSIS_RTOS_V2/: cmsis_os2.c
Drivers/EthDrv/: eth_drv_etherlib.c  eth_drv_lwip.c  mac_drv.c  mac_drv.h
Drivers/EthDrv/phy_drv/: phy_common.c
Inc/: FreeRTOSConfig.h  flexptp_options.h  lwipopts.h  stm32f4xx_hal_conf.h
Modules/: CMakeLists.txt
Src/: CMakeLists.txt  main.c
Src/cliutils/: cli.c
Src/ethernet/: ethernet_etherlib.c  ethernet_lwip.c
Src/standard_output/: CMakeLists.txt  serial_io.c
Startup/: startup_stm32f439zitx.s
cmake/: vscode_generated.cmake
